[workspace]
resolver = "3"
members = ["crates/mot-browser","crates/web-speak"]

[workspace.package]
version = "0.1.0"
edition = "2024"
repository = "https://github.com/motivation-inc/mot-browser.git"
description = "A new kind of web browser"
authors = ["Motivation Software Inc."]
license = "GPL-3.0"
